# ehealth-microservices-2024

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel  deps.bzl  docker-compose.yml  go.mod  go.sum  main.go  skaffold.yaml
k8s/: ingress.yaml  k8s-pod.yaml  patient-service.yaml  postgres.yaml  user-service.yaml
services/patient-service/: BUILD.bazel  Dockerfile  go.mod  main.go
services/patient-service/patients/: BUILD.bazel  service.go
services/patient-service/src/patients/: BUILD.bazel  controller.go  module.go  service.go  types.go
services/patient-service/test/patients/: BUILD.bazel  BUILD.bazel.bak  patients_integration_test.go  patients_suite_test.go  service_test.go
services/patient-service/test/utils/: BUILD.bazel  matcher.go
services/user-service/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
services/user-service/src/users/: types.go
services/user-service/users/: BUILD.bazel  controller.go  service.go  types.go
terraform/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
