"""Module description goes here."""

## https://bazel.build/external/migration

module(
    name = "ehealth-microservices-2024",
    repo_name = "com_github_cloutstrife13_ehealth_microservices_2024",
)

# Go module setup
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_labstack_echo",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "io_gorm_driver_postgres", 
    "io_gorm_gorm",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_postgres",
)