load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "patient-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/patient-service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/patient-service/src/patients",
        "@com_github_kataras_iris_v12//:iris",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)

go_binary(
    name = "dev",
    embed = [":patient-service_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "patient-service",
    embed = [":patient-service_lib"],
    goarch = "arm64",  # use amd64 for non Apple Silicon
    goos = "linux",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":patient-service"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/patient-service"],
    exposed_ports = ["8080/tcp"],
    tars = [":tar"],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@io_bazel_rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@io_bazel_rules_go//go/toolchain:linux_amd64",
    }),
)

oci_tarball(
    name = "container.tar",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["patient-service:latest"],
)
