load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "user-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/user-service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/user-service/users",
        "@com_github_kataras_iris_v12//:iris",
    ],
)

go_binary(
    name = "user-service",
    embed = [":user-service_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    srcs = [":user-service"],
)

load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/user-service"],
    tars = [":tar"],
)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

oci_tarball(
    name = "tarball",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["gcr.io/example:latest"],
)
