load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "user-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/user-service",
    visibility = ["//visibility:private"],
    deps = [
        "//services/user-service/users",
        "@com_github_labstack_echo//:echo",
    ],
)

go_binary(
    name = "dev",
    embed = [":user-service_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "user-service",
    embed = [":user-service_lib"],
    goarch = "arm64",  # use amd64 for non Apple Silicon
    goos = "linux",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":user-service"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/user-service"],
    exposed_ports = ["8081/tcp"],
    tars = [":tar"],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@io_bazel_rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@io_bazel_rules_go//go/toolchain:linux_amd64",
    }),
)

oci_tarball(
    name = "container.tar",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["user-service:latest"],
)
