load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "patients",
    srcs = [
        "controller.go",
        "service.go",
        "types.go",
    ],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/patient-service/patients",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kataras_iris_v12//:iris"],
)

alias(
    name = "go_default_library",
    actual = ":patients",
    visibility = ["//visibility:public"],
)
