load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "patients",
    srcs = [
        "controller.go",
        "module.go",
        "service.go",
        "types.go",
    ],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/patient-service/src/patients",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_labstack_echo//:echo",
        "@io_gorm_gorm//:gorm",
    ],
)

alias(
    name = "go_default_library",
    actual = ":patients",
    visibility = ["//visibility:public"],
)
