load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "patients_test",
    srcs = [
        "patients_suite_test.go",
        "service_test.go",
    ],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//wait:go_default_library",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:go_default_library",
    ],
)
