load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "patients_test",
    srcs = [
        "patients_suite_test.go",
        "service_test.go",
    ],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:postgres",
    ],
)
