load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "patients_test",
    srcs = [
        "patients_integration_test.go",
        "patients_suite_test.go",
    ],
    deps = [
        "//services/patient-service/src/patients",
        "//services/patient-service/test/utils",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_onsi_gomega//gstruct",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:postgres",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
