load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["matcher.go"],
    importpath = "github.com/cloutstrife13/ehealth-microservices-2024/services/patient-service/test/utils",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":utils",
    visibility = ["//visibility:public"],
)
